frontend/src/App.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  list-style: none;
}

body {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

main {
  display: flex;
  padding: 1rem;
  height: calc(100vh - 4rem);
  justify-content: space-between;
  justify-content: space-between;
}

.header-box {
  width: 100%;
  height: 4rem;
  background-color: rgb(218, 125, 125);
  display: flex;
  justify-content: center;
}

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  width: 100%;
}

.header-logo {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.header h1 {
  font-size: 1.5rem;
  letter-spacing: -0.025em;
}

.header img {
  cursor: pointer;
}

.search-bar {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search-bar input[type='text'] {
  all: unset;
  background-color: rgba(255, 255, 255, 0.3);
  width: 400px;
  padding: 10px;
  border: none;
  border-radius: 20px;
  outline: none;
  font-size: 16px;
  font-weight: 500;
}

.search-bar input[type='text']::placeholder {
  color: rgba(255, 255, 255, 0.75);
  opacity: 1;
}

.search-bar input[type='image'] {
  position: absolute;
  margin-left: 365px;
}

.nav-bar {
  display: flex;
  align-items: center;
  gap: 30px;
}

.sidebar {
  position: relative;
  height: 100%;
  position: relative;
  height: 100%;
  background-color: rgb(227, 223, 215);
  width: 20vw;
  width: 20vw;
  color: rgb(46, 46, 46);
  border-radius: 0.5em;
  border-radius: 0.5em;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  transition: all 1s;
  overflow-y: scroll;
  animation: 1s ease-in 0s 1 slideInFromRight;
}


.sidebar h1 {
  width: 100%;
  padding: 1.5rem 2.25rem;
  color: rgb(43, 42, 42);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.section {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  align-items: center;
  margin: 20px 0;
}

.sidebar h3 {
  background-color: rgb(218, 125, 125);
  width: 100%;
  text-align: center;
  height: 30px;
}

.container {
  display: block;
  position: relative;
  padding-left: 35px;
  margin-bottom: 12px;
  cursor: pointer;
  font-size: 16px;
  width: 80%;
  height: 25px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Hide the browser's default checkbox */
.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

/* Create a custom checkbox */
.container.checkbox .checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
}

.container.radio .checkmark{
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #eee;
  border-radius: 50%;
}

.container:hover {
  background-color: rgba(255, 187, 103, 0.741);
  border-radius: 5px;
}

.container:hover input ~ .checkmark, .container.radio :hover input ~ .checkmark{
  background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.container.checkbox input:checked ~ .checkmark {
  background-color: rgb(89, 198, 133);
}

.container.radio input:checked ~ .checkmark {
  background-color: #2196F3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
  content: '';
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
.container input:checked ~ .checkmark:after {
  display: block;
}

/* Style the checkmark/indicator */
.container.radio .checkmark:after {
  top: 9px;
  left: 9px;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: white;
}

.container.checkbox .checkmark:after {
  left: 9px;
  top: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.display-field {
  height: 100px;
  width: 80%;
  border: 1px solid black;
  border-radius: 5px;
}

.tag{
  font-size: 12px;
  background-color: rgb(179, 179, 179);
  margin: 0;
  padding: .5em .75em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 20px;
  width: fit-content;
}

.tag .remove{
  margin-left: .5em;
  height: 12px;
  width: 12px;
  background-color: #222222;
  color: #fff;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.slider-title {
  text-align: center;
  font-weight: 600;
}

.button {
  background-color: rgb(218, 125, 125);
  border-radius: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid black;
  margin: 20px 0 5px 0;
  cursor: pointer;
}

.button p {
  padding: 10px 50px 10px 50px;
}

.summary-card {
  height: 600px;
  width: 98%;
  margin-left: 1%;
  background-color: rgb(227, 223, 215);
  border-radius: 50px;
  border: 10px solid rgb(218, 125, 125);
  color: rgb(46, 46, 46);
}

.summary-card h1 {
  padding-top: 30px;
  padding-left: 30px;
}

.grid {
  margin: 50px 0 0 5%;

  width: 90%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  column-gap: 30px;
  row-gap: 30px;
}

.card {
  border-radius: 15px;
  background-color: white;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
}
.icon {
  font-size: 25px;
  padding: 5px;
  text-align: center;
}

.card p {
  padding: 10px 20px;
}

.red {
  border: 2px solid red;
}
.orange {
  border: 2px solid orange;
}
.yellow {
  border: 2px solid yellow;
}
.greenyellow {
  border: 2px solid greenyellow;
}
.green {
  border: 2px solid green;
}

.map-container {
  position: relative;
}

.map {
  animation: 1s ease-in 0s 1 slideInFromLeft;
  width: 77vw;
  height: 100%;
  border-radius: 0.5rem;
}

.place-card {
  font-size: 14px;
  line-height: 1.5rem;
  background: #fff;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
  margin: 1.75rem;
  padding: 1rem;
  color: #000;
  max-width: 384px;
  border-radius: 0.375rem;
  gap: 1rem;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  max-height: 83vh;
}

.place-card h1 {
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.place-card-section {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.pollen-forecasts {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.pollen-forecast-entry {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
}

.pollen-info {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.pollen-type-card {
  padding: 0.75rem;
  border: 1px solid #000;
  border-radius: 0.5rem;
  box-shadow:
    0 20px 25px -5px rgb(0 0 0 / 0.1),
    0 8px 10px -6px rgb(0 0 0 / 0.1);
}

.pollen-type-card-header {
  display: flex;
  justify-content: space-between;
}

.pollen-type-card-header span {
  font-weight: 500;
}

/* Google Maps marker color fix */
.gm-style-iw-d {
  color: #000;
}

/* Google Maps marker popup close button outline fix */
button.gm-ui-hover-effect {
  outline: none;
}

@keyframes slideInFromLeft {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(0);
  }
}

@keyframes slideInFromRight {
  from {
    margin-left: 20%;
  }
  to {
    margin-left: 0%;
  }
}

